infra/production/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: live-interact
  labels:
    name: live-interact
